Norwegian translation for playlist module
Co-authored-by: Henriette Moe <35261194+henriettemoe@users.noreply.github.com>

--- a/language/nb.json
+++ b/language/nb.json
@@ -205,7 +205,7 @@
       "description": "Disse valgene lar deg legge til spillelister i scenene.",
       "fields": [
         {
-          "label": "Added playlists",
+          "label": "Spillelister lagt til",
           "description": "Make playlists that's available for all scenes by default."
         }
       ]
