--- a/language/ca.json
+++ b/language/ca.json
@@ -201,12 +201,30 @@
       ]
     },
     {
+      "label": "Playlists",
+      "description": "These options will let you add playlists for the scenes.",
+      "fields": [
+        {
+          "label": "Added playlists",
+          "description": "Make playlists that's available for all scenes by default."
+        }
+      ]
+    },
+    {
       "label": "Opcions de comportament",
       "description": "Aquestes opcions us permeten controlar com es comporta el món.",
       "fields": [
         {
           "label": "Audio type",
-          "description": "Decide what audio type this scene will use, either use an audio track or choose an existing audio playlist."
+          "description": "Decide what audio type this scene will use, either use an audio track or choose an existing audio playlist.",
+          "options": [
+            {
+              "label": "Global Audio"
+            },
+            {
+              "label": "Playlist"
+            }
+          ]
         },
         {
           "label": "Àudio global",
@@ -266,130 +284,6 @@
     },
     {
       "label": "Localitza",
-      "description": "These options will let you control how the world behaves.",
-      "fields": [
-        {
-          "label": "Aria label for content type",
-          "description": "Decide what audio type this scene will use, either use an audio track or choose an existing audio playlist.",
-          "options": [
-            {
-              "label": "Global Audio"
-            },
-            {
-              "label": "Playlist"
-            }
-          ]
-        },
-        {
-          "label": "Label for to play audio",
-          "description": "Add an audio track that's available for all of the scenes by default."
-        },
-        {
-          "label": "Label to pause audio",
-          "description": "Here you can pick an existing playlist as audio."
-        },
-        {
-          "label": "Title to scene dialog",
-          "description": "Display button for showing the scores from assignments."
-        },
-        {
-          "label": "Label for button to reset camera",
-          "description": "Choose the amount of width and height segments used to render a scene. This directly affects the quality level of the scene, try increasing the quality if a scene looks \"blocky\" or \"waves\" are seen within the scenes. Note that higher quality rendering takes more time to load.",
-          "options": [
-            {
-              "label": "High Quality (128x128)"
-            },
-            {
-              "label": "Medium Quality (64x64)"
-            },
-            {
-              "label": "Low Quality (16x16)"
-            }
-          ]
-        },
-        {
-          "label": "Label for the submit dialog button",
-          "fields": [
-            {
-              "label": "Label position",
-              "description": "The default label position. The position may be overriden per interaction",
-              "options": [
-                {
-                  "label": "Right aligned"
-                },
-                {
-                  "label": "Left aligned"
-                },
-                {
-                  "label": "Top aligned"
-                },
-                {
-                  "label": "Bottom aligned"
-                }
-              ]
-            },
-            {
-              "label": "Display Labels",
-              "description": "If unchecked - labels will show only on mouse over"
-            }
-          ]
-        },
-        {
-          "label": "Label for the close dialog button",
-          "default": "Close Dialog"
-        },
-        {
-          "label": "Aria label for the expand label button",
-          "default": "Expand the visual label"
-        },
-        {
-          "label": "Label for when background image is loading in 360 scene",
-          "default": "Loading background image..."
-        },
-        {
-          "label": "Label for when there is no content",
-          "default": "No content"
-        },
-        {
-          "label": "Label for context menu button for go to scene",
-          "default": "Go to scene"
-        },
-        {
-          "label": "Label for context menu button for edit",
-          "default": "Edit"
-        },
-        {
-          "label": "Label for context menu button for delete",
-          "default": "Delete"
-        },
-        {
-          "label": "Translation for \"Score\"",
-          "default": "Score"
-        },
-        {
-          "label": "Translation for \"Assignment\"",
-          "default": "Assignment"
-        },
-        {
-          "label": "Translation for \"Total\"",
-          "default": "Total"
-        },
-        {
-          "label": "Translation for \"Total Score\"",
-          "default": "Total Score"
-        },
-        {
-          "label": "Label for button to show score summary",
-          "default": "Show Score Summary"
-        },
-        {
-          "label": "Translation for 'Scene'",
-          "default": "Scene"
-        }
-      ]
-    },
-    {
-      "label": "Localize",
       "fields": [
         {
           "label": "Aria label for content type",
@@ -405,7 +299,7 @@
         },
         {
           "label": "Title to scene dialog",
-          "default": "Scene Description"
+          "default": "Descripció de l’escena"
         },
         {
           "label": "Label for button to reset camera",
