Fix typo in bokmål translation

--- a/language/nb.json
+++ b/language/nb.json
@@ -240,7 +240,7 @@
         },
         {
           "label": "Kvalitet på scene-rendering",
-          "description": "Velg Choose the amount of width and height segments used to render a scene. This directly affects the quality level of the scene, try increasing the quality if a scene looks \"blocky\" or \"waves\" are seen within the scenes. Note that higher quality rendering takes more time to load.",
+          "description": "Choose the amount of width and height segments used to render a scene. This directly affects the quality level of the scene, try increasing the quality if a scene looks \"blocky\" or \"waves\" are seen within the scenes. Note that higher quality rendering takes more time to load.",
           "options": [
             {
               "label": "Høy kvalitet (128x128)"
