--- a/language/ko.json
+++ b/language/ko.json
@@ -148,7 +148,7 @@
                   "label": "우측 정렬"
                 },
                 {
-                  "label": "왼쪽 정렬
+                  "label": "왼쪽 정렬"
                 },
                 {
                   "label": "상단 정렬"
