Bug/use title for questions when label is not available (#74)
* use title for questions when label is not available in score summary

* updated translations

* inc patch

* Update language/nb.json

Co-authored-by: Sindre Bøyum <boyum@users.noreply.github.com>

* Update language/nn.json

Co-authored-by: Sindre Bøyum <boyum@users.noreply.github.com>

* Update library.json

Co-authored-by: Sindre Bøyum <boyum@users.noreply.github.com>

Co-authored-by: Kent Inge F. Simonsen <kent.simonsen@tietoevry.com>
Co-authored-by: Sindre Bøyum <boyum@users.noreply.github.com>

--- a/language/nn.json
+++ b/language/nn.json
@@ -360,6 +360,10 @@
         {
           "label": "Translation for 'Scene'",
           "default": "Scene"
+        },
+        {
+          "label": "Utan tittel",
+          "default": "Utan tittel"
         }
       ]
     }
