--- a/language/nb.json
+++ b/language/nb.json
@@ -360,6 +360,10 @@
         {
           "label": "Translation for 'Scene'",
           "default": "Scene"
+        },
+        {
+          "label": "Uten tittel",
+          "default": "Uten tittel"
         }
       ]
     }
