--- a/language/nn.json
+++ b/language/nn.json
@@ -4,24 +4,27 @@
       "label": "Three Image Editor",
       "fields": [
         {
-          "label": "Scenes",
+          "label": "Scener",
           "entity": "Scene",
           "field": {
             "fields": [
               {
-                "label": "Scene type",
+                "label": "Scenetype",
                 "options": [
                   {
-                    "label": "360 image"
+                    "label": "360-graders bilete"
                   },
                   {
-                    "label": "Static image"
+                    "label": "Panoramabilete"
+                  },
+                  {
+                    "label": "Statisk bilete"
                   }
                 ]
               },
               {
-                "label": "Display \"Back\" button",
-                "description": "Display button for navigating back to your previous scene"
+                "label": "Vis \"Tilbake\"-knapp",
+                "description": "Vis knapp som tar brukaren tilbake til forrige scene"
               },
               {},
               {
@@ -150,8 +153,27 @@
                 ]
               },
               {
+                "label": "Audio type",
+                "description": "Decide what audio type this scene will use, either use an audio track or choose an existing audio playlist.",
+                "options": [
+                  {
+                    "label": "Audio Track"
+                  },
+                  {
+                    "label": "Playlist"
+                  }
+                ]
+              },
+              {
                 "label": "Audio Track",
                 "description": "Add an audio track that's specific for this scene."
+              },
+              {
+                "label": "Playlist",
+                "description": "Here you can pick an existing playlist as audio."
+              },
+              {
+                "label": "Restart audio when scene is reopened"
               }
             ]
           }
@@ -159,6 +181,32 @@
         {},
         {
           "label": "Audio track"
+        },
+        {
+          "label": "Playlists",
+          "field": {
+            "fields": [
+              {
+                "label": "Playlist Title",
+                "description": "Used to identify the playlist"
+              },
+              {
+                "label": "Audio Tracks",
+                "description": "Add audio tracks to the playlist."
+              },
+              {}
+            ]
+          }
+        }
+      ]
+    },
+    {
+      "label": "Playlists",
+      "description": "These options will let you add playlists for the scenes.",
+      "fields": [
+        {
+          "label": "Added playlists",
+          "description": "Make playlists that's available for all scenes by default."
         }
       ]
     },
@@ -167,8 +215,28 @@
       "description": "These options will let you control how the world behaves.",
       "fields": [
         {
+          "label": "Audio type",
+          "description": "Decide what audio type this scene will use, either use an audio track or choose an existing audio playlist.",
+          "options": [
+            {
+              "label": "Global Audio"
+            },
+            {
+              "label": "Playlist"
+            }
+          ]
+        },
+        {
           "label": "Global Audio",
           "description": "Add an audio track that's available for all of the scenes by default."
+        },
+        {
+          "label": "Playlist",
+          "description": "Here you can pick an existing playlist as audio."
+        },
+        {
+          "label": "Display \"Scores\" button",
+          "description": "Display button for showing the scores from assignments."
         },
         {
           "label": "Scene rendering quality",
@@ -256,6 +324,46 @@
         {
           "label": "Label for when there is no content",
           "default": "No content"
+        },
+        {
+          "label": "Label for context menu button for go to scene",
+          "default": "Go to scene"
+        },
+        {
+          "label": "Label for context menu button for edit",
+          "default": "Edit"
+        },
+        {
+          "label": "Label for context menu button for delete",
+          "default": "Delete"
+        },
+        {
+          "label": "Translation for \"Score\"",
+          "default": "Score"
+        },
+        {
+          "label": "Translation for \"Assignment\"",
+          "default": "Assignment"
+        },
+        {
+          "label": "Translation for \"Total\"",
+          "default": "Total"
+        },
+        {
+          "label": "Translation for \"Total Score\"",
+          "default": "Total Score"
+        },
+        {
+          "label": "Label for button to show score summary",
+          "default": "Show Score Summary"
+        },
+        {
+          "label": "Translation for 'Scene'",
+          "default": "Scene"
+        },
+        {
+          "label": "Utan tittel",
+          "default": "Utan tittel"
         }
       ]
     }
