--- a/language/ko.json
+++ b/language/ko.json
@@ -72,7 +72,7 @@
                           "description": "숨겨진 경우 - 라벨은 마우스 커서 위에 표시됩니다.",
                           "options": [
                             {
-                              "label": "행동설정 사용"
+                              "label": "동작 설정 사용"
                             },
                             {
                               "label": "보이기"
